--- a/dashboard.HTML
+++ b/dashboard.HTML
@@ -265,7 +265,7 @@
                         <div class="form-step" data-step="4">
                             <h3>Review Your Information</h3>
                             <div class="review-section">
-                                <div class="review-card">
+                                <div class="review-card">.;;;....;;;
                                     <h4>Personal Information</h4>
                                     <div id="reviewPersonal"></div>
                                 </div>
