--- a/dashboard.html
+++ b/dashboard.html
@@ -35,7 +35,10 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" onclick="logout()">
+            <a
+              href="file:///D:/internership/rse_kyc_portal/index.html"
+              onclick="logout()"
+            >
               <i class="fas fa-sign-out-alt"></i> Logout
             </a>
           </li>
