--- a/admin.html
+++ b/admin.html
@@ -9,10 +9,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+    <button class="admin-mobile-toggle" onclick="toggleAdminMobileMenu()">
+        <i class="fas fa-bars"></i>
+    </button>
     <div class="admin-container">
-        <nav class="admin-sidebar">
+        <nav class="admin-sidebar" id="adminSidebar">
             <div class="sidebar-header">
-                <h2>RSE Admin</h2>
+                <h2>🛡️ RSE Admin</h2>
                 <p>Management Portal</p>
             </div>
             <ul class="nav-menu">
@@ -254,5 +257,21 @@
     </div>
 
     <script src="js/admin.js"></script>
+    <script>
+function toggleAdminMobileMenu() {
+    const sidebar = document.getElementById('adminSidebar');
+    sidebar.classList.toggle('open');
+}
+
+// Close mobile menu when clicking outside
+document.addEventListener('click', (event) => {
+    const sidebar = document.getElementById('adminSidebar');
+    const toggle = document.querySelector('.admin-mobile-toggle');
+    
+    if (!sidebar.contains(event.target) && !toggle.contains(event.target)) {
+        sidebar.classList.remove('open');
+    }
+});
+</script>
 </body>
 </html>
